--- a/app/src/main/res/layout/activity_registrar_contacto.xml
+++ b/app/src/main/res/layout/activity_registrar_contacto.xml
@@ -1,9 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#84FFFF"
+    android:padding="10dp"
     tools:context=".RegistrarContacto">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Registrar Contacto \n Base De Datos \n Mi Agenda"
+        android:textStyle="italic|bold"
+        android:textSize="15dp"
+        android:background="#00E676"/>
+    <ImageView
+        android:layout_width="220dp"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="65dp"
+        android:src="@drawable/dvs"/>
+    <EditText
+        android:id="@+id/IngreNom"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:textStyle="normal"
+        android:hint="Nombre del contacto"
+        android:layout_marginTop="275dp"/>
+    <EditText
+        android:id="@+id/IngreTel"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:textStyle="normal"
+        android:hint="Teléfono"
+        android:layout_marginTop="335dp"/>
+    <Button
+        android:id="@+id/Add"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="Agregar"
+        android:textStyle="normal"
+        android:textSize="15dp"
+        android:drawableRight="@drawable/ic"
+        android:backgroundTint="#222950"
+        android:layout_marginTop="395dp"/>
+    <Button
+        android:id="@+id/Regresar"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="Back"
+        android:textStyle="normal"
+        android:textSize="15dp"
+        android:drawableRight="@drawable/bac"
+        android:backgroundTint="#222950"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="395dp"/>
+</RelativeLayout>
